<resources>
    <string name="app_name">MisTyPatcher "Block City Wars"</string>
    <string-array name="numbers">
        <item>Seleccionar</item>
        <item>normal</item>
        <item>vip</item>
        <item>banned</item>
    </string-array>
    <string name="server">MrEoZzMoD.github.io</string>
    <string name="engine_process_name">:x</string>
    <string name="virtual_installer">VirtualPackage Installer</string>
    <string name="owner_name">Admin</string>
    <string name="choose">Choose</string>
    <string name="choose_empty">Chooser is Empty</string>
    <string name="noApplications">No find applications</string>
    <string name="add_account_button_label">Add account</string>
    <string name="made_by">Team MRZ</string>
    <string name="presents">_MrEoZ Presents_</string>
    <string name="create_shourtcut">Create Shourtcut For Modded Game</string>
    <string name="launch_game">Launch Modded Game</string>
    <string name="launch_live">Launch Live Patcher</string>
    <string name="close_patcher">Close Patcher And Game</string>
    <string name="whatsapp">whatsapp</string>
    <string name="youtube">youtube</string>
    <string name="facebook">facebook</string>
    <string name="gplus">gplus</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
